Use discriminated unions for different schema types

--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
+  "name": "typed-json-schema",
+  "version": "1.0.0",
+  "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "conditional-type-checks": "^0.6.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.6",
+    "jest": "^24.1.0",
+    "ts-jest": "^24.0.0",
+    "typescript": "^3.3.3333"
   }
 }
