--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,20 @@
 {
-  "compilerOptions": {}
+  "compilerOptions": {
+    "target": "es2018",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+
+    "sourceMap": true,
+
+    "strict": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+
+    "lib": ["dom", "es2015", "es2016", "es2017", "es2018"],
+
+    "outDir": "dist",
+    "rootDir": "src"
+  },
+  "include": ["src/**/*"]
 }
