--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
 
-    "sourceMap": true,
+    "declaration": true,
+    "sourceMap": false,
 
     "strict": true,
     "noImplicitReturns": true,
