--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json-schema-to-instance-type",
+  "name": "json-schema-to-type",
   "version": "0.1.0",
   "license": "MIT",
   "author": {
