--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "jest",
     "clean": "rm -rf dist",
     "build": "tsc",
-    "release": "yarn test && yarn build && yarn publish"
+    "release": "yarn test && yarn clean && yarn build && yarn publish"
   },
   "peerDependencies": {
     "typescript": "^3.4"
